--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,7 @@ html {
 body {
     color: rgb(119, 119, 119);
     font-family: "Barlow", sans-serif;
-    font-size: 18px;
+    font-size: 21px;
     background-color: white;
 }
 
@@ -41,7 +41,7 @@ button {
     padding: 0 1em;
     padding-top: .15em; /* Bugfix */
     font-family: "ITC Avant Garde Std", sans-serif;
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 2em;
     text-transform: lowercase;
     letter-spacing: -.035em;
@@ -102,19 +102,19 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2.25em;
     line-height: 115%;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.75em;
     line-height: 67%;
-    margin-bottom: 1em;
+    margin-bottom: .75em;
 }
 
 h3 {
-    font-size: 1.5em;
-    line-height: 1.5em;
+    font-size: 1.25em;
+    line-height: 1.25em;
 }
 
 h1 + p {
@@ -122,7 +122,7 @@ h1 + p {
     color: rgb(158, 119, 255);
     font-family: "Selphia Script", sans-serif;
     font-weight: normal;
-    font-size: 2em;
+    font-size: 1.75em;
     line-height: 67%;
     -webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
@@ -149,7 +149,7 @@ nav {
     right: 0;
     left: 0;
     width: 100%;
-    height: 3.75em;
+    height: 3.25em;
     text-align: center;
     background-color: rgb(93, 60, 246);
 }
@@ -160,7 +160,7 @@ nav .container {
 
 nav .logo {
     position: relative;
-    top: .75em;
+    top: .7em;
     width: auto;
     height: inherit;
 }
@@ -168,13 +168,15 @@ nav .logo {
 /* Header */
 
 header {
-    padding: 6em 0;
+    padding-top: 3.75em;
+    padding-bottom: 5.5em;
     text-align: center;
     background-image: linear-gradient(0deg, rgb(240, 243, 245) 0%, white 50%);
 }
 
 header .hero {
-    width: auto;
+    width: 65%;
+    margin: 0 auto;
 }
 
 /* Main */
@@ -197,6 +199,10 @@ main section::after {
 
 main section.introduction {
     margin-top: -4em;
+}
+
+main section.information {
+    margin-top: 3.5em;
 }
 
 main section.information > * {
@@ -225,7 +231,7 @@ main section.information:nth-of-type(even) > .code {
     margin-left: 5%;
 }
 
-main section.information:nth-of-type(even) > .code h3 {
+main section.information:nth-of-type(odd) > .code h3 {
     text-align: right;
     margin-right: .25em;
 }
@@ -239,7 +245,6 @@ main section.information > .code h3 {
     margin-top: 1em;
     margin-bottom: .75em;
     margin-left: .25em;
-    text-align: left;
 }
 
 main section.information > .preview {
@@ -396,6 +401,7 @@ code {
     overflow: hidden;
     display: block;
     position: relative;
+    max-width: 100%;
     color: white;
     font-size: .75em;
     font-family: "Droid Sans", monospace;
@@ -478,12 +484,14 @@ code xmp {
     margin: 0;
     padding: 1.5em 2.25em;
     font-family: "Droid Sans", monospace;
+    word-break: break-word;
+    white-space: pre-wrap;
     border-radius: 1em;
 }
 
 code + button {
     margin: 0 auto;
-    margin-top: 2em;
+    margin-top: 1em;
     color: rgb(93, 60, 246);
     border: 4px solid rgb(93, 60, 246);
     border-radius: .5em;
@@ -500,16 +508,28 @@ code + button {
     .container {
         width: 90%;
     }
+    section.information {
+        margin-top: 3.5em;
+        margin-bottom: 0;
+    }
     section.information > * {
         width: 100% !important;
         margin-left: 0 !important;
         margin-right: 0 !important;
-        margin-bottom: 4em !important;
+        margin-bottom: 0 !important;
+        margin-bottom: 0 !important;
+    }
+    section.information > *:first-child {
+        margin-bottom: 2em !important;
     }
     section.information h3 {
+        margin-top: 0 !important;
         text-align: center !important;
     }
     section.indication .note {
+        width: 100%;
+    }
+    code.major {
         width: 100%;
     }
 }
@@ -522,11 +542,19 @@ code + button {
     .container {
         width: 75%;
     }
+    section.information {
+        margin-top: 3.5em;
+        margin-bottom: 0;
+    }
     section.information > * {
         width: 100% !important;
         margin-left: 0 !important;
         margin-right: 0 !important;
-        margin-bottom: 4em !important;
+        margin-bottom: 0 !important;
+        margin-bottom: 0 !important;
+    }
+    section.information > *:first-child {
+        margin-bottom: 2em !important;
     }
     section.information h3 {
         text-align: center !important;
@@ -587,12 +615,5 @@ code + button {
 @media only screen and (min-width: 1680px) {
     body {
         font-size: 20px;
-    }
-}
-
-/* 1920 ≤ Window Width */
-@media only screen and (min-width: 1920px) {
-    body {
-        font-size: 21px;
     }
 }
