--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -403,7 +403,7 @@ code {
     position: relative;
     max-width: 100%;
     color: white;
-    font-size: .75em;
+    font-size: .8em;
     font-family: "Droid Sans", monospace;
     line-height: 1.65em;
     text-align: left;
@@ -419,8 +419,8 @@ code.major {
     box-shadow: 0 .5em 1em 0 rgba(93, 60, 246, .35);
 }
 
-code.major.tabbed xmp {
-    padding-top: 4.5em;
+code.major.tabbed pre {
+    padding-top: 4.5em !important;
 }
 
 code.tabbed .options {
@@ -430,6 +430,7 @@ code.tabbed .options {
     left: 0;
     width: 100%;
     height: 3em;
+    font-family: "Barlow", sans-serif;
 }
 
 code.tabbed .options::after {
@@ -469,24 +470,48 @@ code.tabbed .options a.active {
     box-shadow: 0 -.15em .15em 0 rgba(0, 0, 0, .075);
 }
 
-code.tabbed xmp {
+code.tabbed pre {
     display: none;
 }
-code.tabbed xmp.active {
+code.tabbed pre.active {
     display: block;
 }
 
-code.major xmp {
+code.major pre {
     border: .2em solid rgba(255, 255, 255, .1);
 }
 
-code xmp {
+code pre {
     margin: 0;
-    padding: 1.5em 2.25em;
-    font-family: "Droid Sans", monospace;
+    padding: 1.5em .75em !important;
+    font-family: "Droid Sans", monospace !important;
     word-break: break-word;
     white-space: pre-wrap;
     border-radius: 1em;
+    background-color: transparent !important;
+}
+
+code pre ol li {
+    padding: 0 1.5em 0 .5em;
+    color: rgba(0, 0, 0, .25) !important;
+    list-style-position: inside !important;
+    list-style-type: decimal !important;
+}
+
+code pre ol li:nth-of-type(even) {
+    background-color: transparent;
+}
+
+code pre ol li:nth-of-type(even) {
+    background-color: rgba(93, 60, 246, .2);
+}
+
+code pre xmp {
+    display: inline-block;
+    margin: 0;
+    font-family: "Droid Sans", monospace;
+    line-height: 1.8em;
+    text-align: left;
 }
 
 code + button {
