--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -103,19 +103,19 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 2.25em;
+    font-size: 2.2em;
     line-height: 115%;
 }
 
 h2 {
-    font-size: 1.75em;
+    font-size: 1.8em;
     line-height: 67%;
     margin-bottom: .75em;
 }
 
 h3 {
-    font-size: 1.25em;
-    line-height: 1.25em;
+    font-size: 1.4em;
+    line-height: 1.4em;
 }
 
 h1 + p {
@@ -123,7 +123,7 @@ h1 + p {
     color: rgb(158, 119, 255);
     font-family: "Selphia Script", sans-serif;
     font-weight: normal;
-    font-size: 1.75em;
+    font-size: 2em;
     line-height: 67%;
     -webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
@@ -169,7 +169,7 @@ nav .logo {
 /* Header */
 
 header {
-    padding-top: 3.75em;
+    padding-top: 4em;
     padding-bottom: 5.5em;
     text-align: center;
     background-image: linear-gradient(0deg, rgb(240, 243, 245) 0%, white 50%);
@@ -178,6 +178,7 @@ header {
 header .hero {
     width: 65%;
     margin: 0 auto;
+    margin-bottom: .5em;
 }
 
 /* Main */
@@ -375,13 +376,13 @@ section.indication .brand {
 }
 
 section.indication .brand .logo {
-    width: 90%;
-    margin-right: 10%;
+    width: 87.5%;
+    margin-right: 12.5%;
 }
 
 section.indication .brand p {
     margin-top: -1.3em;
-    margin-left: 2.6em;
+    margin-left: 2.5em;
     color: rgb(158, 119, 255);
     font-family: "Selphia Script", sans-serif;
     font-weight: normal;
@@ -511,7 +512,7 @@ code.tabbed pre.active {
 }
 
 code.major pre {
-    border: .2em solid rgba(255, 255, 255, .1);
+    border: .2em solid rgba(255, 255, 255, .1) !important;
 }
 
 code pre {
@@ -520,6 +521,7 @@ code pre {
     font-family: "Droid Sans", monospace !important;
     word-break: break-word;
     white-space: pre-wrap;
+    border: none !important;
     border-radius: 1em;
     background-color: transparent !important;
 }
@@ -566,6 +568,11 @@ code + button {
     .container {
         width: 90%;
     }
+    header .hero {
+        width: 100%;
+        margin-top: .5em;
+        margin-bottom: 1.5em;
+    }
     section.information {
         margin-top: 3.5em;
         margin-bottom: 0;
@@ -587,8 +594,19 @@ code + button {
     section.indication .note {
         width: 100%;
     }
+    code {
+        width: 80%;
+        margin: 0 auto;
+    }
     code.major {
         width: 100%;
+    }
+    code pre {
+        padding: 1.5em .5em !important;
+    }
+    code pre ol li {
+        padding: 0 .5em;
+        list-style-type: none !important;
     }
 }
 
@@ -599,6 +617,11 @@ code + button {
     }
     .container {
         width: 75%;
+    }
+    header .hero {
+        width: 90%;
+        margin-top: .5em;
+        margin-bottom: 1.5em;
     }
     section.information {
         margin-top: 3.5em;
@@ -620,6 +643,20 @@ code + button {
     section.indication .note {
         width: 100%;
     }
+    code {
+        width: 80%;
+        margin: 0 auto;
+    }
+    code.major {
+        width: auto;
+    }
+    code pre {
+        padding: 1.5em 0 !important;
+    }
+    code pre ol li {
+        padding: 0 1em;
+        list-style-type: none !important;
+    }
 }
 
 /* 768 ≤ Window Width < 1024 */
@@ -629,6 +666,11 @@ code + button {
     }
     .container {
         width: 90%;
+    }
+    header .hero {
+        width: 80%;
+        margin-top: .5em;
+        margin-bottom: 1.5em;
     }
 }
 
