--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -35,14 +35,15 @@ input, textarea {
     outline: none;
 }
 
-button {
-    display: block;
+button, .button {
+    display: inline-block;
     z-index: 1;
     padding: 0 1em;
     padding-top: .15em; /* Bugfix */
     font-family: "ITC Avant Garde Std", sans-serif;
     font-size: 1.1em;
     line-height: 2em;
+    text-decoration: none;
     text-transform: lowercase;
     letter-spacing: -.035em;
     border: none;
@@ -476,7 +477,7 @@ code.tabbed .options::after {
 code.tabbed .options a {
     box-sizing: border-box;
     float: left;
-    width: 25%;
+    width: calc(100% /3);
     height: 3em;
     line-height: 3em;
     text-align: center;
@@ -549,13 +550,23 @@ code pre xmp {
     text-align: left;
 }
 
-code + button {
+code + button, .button {
     margin: 0 auto;
     margin-top: 1em;
     color: rgb(93, 60, 246);
     border: 4px solid rgb(93, 60, 246);
     border-radius: .5em;
     box-shadow: 0 .15em .05em 0 rgba(93, 60, 246, .15);
+}
+
+code + p {
+    font-size: 1.2em;
+    margin-top: 2em;
+}
+
+code + p > a {
+    color: rgb(93, 60, 246);
+    text-decoration: none;
 }
 
 /* Responsive Metrics */
